conversion scripts added to repo

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,19 @@
 data/MELDRaw/*
-!data/MELDRaw/*.py
-data/EmoSynth/*
+!data/MELDRaw/test_data/
+data/MELDRaw/test_data/*
+!data/MELDRaw/test_data/output_repeated_splits_test
+data/MELDRaw/test_data/output_repeated_splits_test/*
+!data/MELDRaw/test_data/output_repeated_splits_test/*.py
+
+
+!data/MELDRaw/test_data/output_repeated_splits_test/WAVs
+data/MELDRaw/test_data/output_repeated_splits_test/WAVs/*
+!data/MELDRaw/test_data/output_repeated_splits_test/WAVs/*.py
+
+
+!data/MELDRaw/test_data/output_repeated_splits_test/MP4s
+data/MELDRaw/test_data/output_repeated_splits_test/MP4s/*
+!data/MELDRaw/test_data/output_repeated_splits_test/MP4s/*.py
+
+data/EmoSynth
+
