--- a/requirements.txt
+++ b/requirements.txt
@@ -2,99 +2,101 @@
 # $ conda create --name <env> --file <this file>
 # platform: win-64
 _tflow_select=2.1.0=gpu
-absl-py=0.15.0=pyhd3eb1b0_0
-aiohttp=3.8.1=py37h2bbff1b_0
-aiosignal=1.2.0=pyhd3eb1b0_0
-astor=0.8.1=py37haa95532_0
-async-timeout=4.0.1=pyhd3eb1b0_0
-asynctest=0.13.0=py_0
-attrs=21.2.0=pyhd3eb1b0_0
+absl-py=0.12.0=pyhd8ed1ab_0
+astor=0.8.1=pyh9f0ad1d_0
+backcall=0.2.0=pyh9f0ad1d_0
+backports=1.0=py_2
+backports.functools_lru_cache=1.6.4=pyhd8ed1ab_0
 blas=1.0=mkl
-blinker=1.4=py37haa95532_0
-bottleneck=1.3.2=py37h2a96729_1
-brotlipy=0.7.0=py37h2bbff1b_1003
-ca-certificates=2021.10.26=haa95532_2
-cached-property=1.5.2=py_0
-cachetools=4.2.2=pyhd3eb1b0_0
-certifi=2021.10.8=py37haa95532_0
-cffi=1.15.0=py37h2bbff1b_0
-charset-normalizer=2.0.4=pyhd3eb1b0_0
-click=8.0.3=pyhd3eb1b0_0
-cryptography=3.4.8=py37h71e12ea_0
-cudatoolkit=10.0.130=0
+bottleneck=1.3.2=py37hec80d1f_5
+ca-certificates=2021.10.8=h5b45459_0
+cached-property=1.5.2=hd8ed1ab_1
+cached_property=1.5.2=pyha770c72_1
+certifi=2021.10.8=py37h03978a9_1
+colorama=0.4.4=pyh9f0ad1d_0
+cudatoolkit=10.0.130=h5327add_9
 cudnn=7.6.5=cuda10.0_0
-frozenlist=1.2.0=py37h2bbff1b_0
+debugpy=1.5.1=py37hf2a7229_0
+decorator=5.1.1=pyhd8ed1ab_0
+entrypoints=0.3=pyhd8ed1ab_1003
 gast=0.2.2=py37_0
-google-auth=1.33.0=pyhd3eb1b0_0
-google-auth-oauthlib=0.4.4=pyhd3eb1b0_0
-google-pasta=0.2.0=pyhd3eb1b0_0
-grpcio=1.42.0=py37hc60d5dd_0
-h5py=3.6.0=py37h3de5c98_0
-hdf5=1.10.6=h7ebc959_0
-icc_rt=2019.0.0=h0cc432a_1
-idna=3.3=pyhd3eb1b0_0
-importlib-metadata=4.8.2=py37haa95532_0
-intel-openmp=2021.4.0=haa95532_3556
-joblib=1.1.0=pyhd3eb1b0_0
+google-pasta=0.2.0=pyh8c360ce_0
+grpcio=1.43.0=py37h265e445_0
+h5py=3.6.0=nompi_py37h2502845_100
+hdf5=1.12.1=nompi_h57737ce_103
+importlib-metadata=4.10.1=py37h03978a9_0
+intel-openmp=2022.0.0=h57928b3_3663
+ipykernel=6.7.0=py37h4038f58_0
+ipython=7.29.0=py37hd4e2768_0
+jedi=0.18.1=py37h03978a9_0
+joblib=1.1.0=pyhd8ed1ab_0
+jupyter_client=7.1.1=pyhd8ed1ab_0
+jupyter_core=4.9.1=py37h03978a9_1
 keras-applications=1.0.8=py_1
 keras-base=2.3.1=py37_0
 keras-gpu=2.3.1=0
-keras-preprocessing=1.1.2=pyhd3eb1b0_0
-libprotobuf=3.19.1=h23ce68f_0
-markdown=3.3.4=py37haa95532_0
-mkl=2020.2=256
+keras-preprocessing=1.1.2=pyhd8ed1ab_0
+krb5=1.19.2=h6da9e4a_3
+libblas=3.9.0=8_mkl
+libcblas=3.9.0=8_mkl
+libcurl=7.81.0=h789b8ee_0
+liblapack=3.9.0=8_mkl
+libprotobuf=3.19.3=h7755175_0
+libsodium=1.0.18=h8d14728_1
+libssh2=1.10.0=h9a1e1f7_2
+libzlib=1.2.11=h8ffe710_1013
+m2w64-gcc-libgfortran=5.3.0=6
+m2w64-gcc-libs=5.3.0=7
+m2w64-gcc-libs-core=5.3.0=7
+m2w64-gmp=6.1.0=2
+m2w64-libwinpthread-git=5.0.0.4634.697f757=2
+markdown=3.3.6=pyhd8ed1ab_0
+matplotlib-inline=0.1.3=pyhd8ed1ab_0
+mkl=2020.4=hb70f87d_311
 mkl-service=2.3.0=py37h196d8e1_0
-mkl_fft=1.3.0=py37h46781fe_0
-mkl_random=1.1.1=py37h47e9c7a_0
-multidict=5.1.0=py37h2bbff1b_2
+msys2-conda-epoch=20160418=1
+nest-asyncio=1.5.4=pyhd8ed1ab_0
 numexpr=2.7.3=py37hcbcaa1e_0
-numpy=1.19.2=py37hadc3359_0
-numpy-base=1.19.2=py37ha3acd2a_0
-oauthlib=3.1.1=pyhd3eb1b0_0
-openssl=1.1.1l=h2bbff1b_0
-opt_einsum=3.3.0=pyhd3eb1b0_1
-packaging=21.3=pyhd3eb1b0_0
+numpy=1.21.5=py37h5fa1a60_0
+openssl=3.0.0=h8ffe710_2
+opt_einsum=3.3.0=pyhd8ed1ab_1
 pandas=1.3.5=py37h6214cd6_0
-pip=21.2.4=py37haa95532_0
-protobuf=3.19.1=py37hd77b12b_0
-pyasn1=0.4.8=pyhd3eb1b0_0
-pyasn1-modules=0.2.8=py_0
-pycparser=2.21=pyhd3eb1b0_0
-pyjwt=2.1.0=py37haa95532_0
-pyopenssl=21.0.0=pyhd3eb1b0_1
-pyparsing=3.0.4=pyhd3eb1b0_0
-pyreadline=2.1=py37_1
-pysocks=1.7.1=py37_1
-python=3.7.11=h6244533_0
-python-dateutil=2.8.2=pyhd3eb1b0_0
-pytz=2021.3=pyhd3eb1b0_0
-pyyaml=6.0=py37h2bbff1b_1
-requests=2.27.1=pyhd3eb1b0_0
-requests-oauthlib=1.3.0=py_0
-rsa=4.7.2=pyhd3eb1b0_1
+parso=0.8.3=pyhd8ed1ab_0
+pickleshare=0.7.5=py_1003
+pip=21.3.1=pyhd8ed1ab_0
+prompt-toolkit=3.0.24=pyha770c72_0
+protobuf=3.19.3=py37hf2a7229_0
+pygments=2.11.2=pyhd8ed1ab_0
+python=3.7.12=h900ac77_100_cpython
+python-dateutil=2.8.2=pyhd8ed1ab_0
+python_abi=3.7=2_cp37m
+pytz=2021.3=pyhd8ed1ab_0
+pywin32=303=py37hcc03f2d_0
+pyyaml=6.0=py37hcc03f2d_3
+pyzmq=22.3.0=py37hcce574b_1
 scikit-learn=0.21.2=py37h6288b17_0
-scipy=1.6.2=py37h14eb087_0
-setuptools=58.0.4=py37haa95532_0
-six=1.16.0=pyhd3eb1b0_0
-sqlite=3.37.0=h2bbff1b_0
-tensorboard=2.4.0=pyhc547734_0
-tensorboard-plugin-wit=1.6.0=py_0
+scipy=1.7.3=py37hb6553fb_0
+setuptools=60.5.0=py37h03978a9_0
+six=1.16.0=pyh6c4a22f_0
+sqlite=3.37.0=h8ffe710_0
+tensorboard=1.15.0=py37_0
 tensorflow=1.15.0=gpu_py37hc3743a6_0
 tensorflow-base=1.15.0=gpu_py37h1afeea4_0
-tensorflow-estimator=2.6.0=pyh7b7c402_0
+tensorflow-estimator=2.5.0=pyh81a9013_1
 tensorflow-gpu=1.15.0=h0d30ee6_0
-termcolor=1.1.0=py37haa95532_1
-typing-extensions=3.10.0.2=hd3eb1b0_0
-typing_extensions=3.10.0.2=pyh06a4308_0
-urllib3=1.26.7=pyhd3eb1b0_0
-vc=14.2=h21ff451_1
-vs2015_runtime=14.27.29016=h5e58377_2
+termcolor=1.1.0=py_2
+tk=8.6.11=h8ffe710_1
+tornado=6.1=py37hcc03f2d_2
+traitlets=5.1.1=pyhd8ed1ab_0
+typing_extensions=4.0.1=pyha770c72_0
+ucrt=10.0.20348.0=h57928b3_0
+vc=14.2=hb210afc_6
+vs2015_runtime=14.29.30037=h902a5da_6
+wcwidth=0.2.5=pyh9f0ad1d_2
 werkzeug=0.16.1=py_0
-wheel=0.37.1=pyhd3eb1b0_0
-win_inet_pton=1.1.0=py37haa95532_0
-wincertstore=0.2=py37haa95532_2
-wrapt=1.13.3=py37h2bbff1b_2
-yaml=0.2.5=he774522_0
-yarl=1.6.3=py37h2bbff1b_0
-zipp=3.7.0=pyhd3eb1b0_0
-zlib=1.2.11=h8cc25b3_4
+wheel=0.37.1=pyhd8ed1ab_0
+wrapt=1.13.3=py37hcc03f2d_1
+yaml=0.2.5=h8ffe710_2
+zeromq=4.3.4=h0e60522_1
+zipp=3.7.0=pyhd8ed1ab_0
+zlib=1.2.11=h8ffe710_1013
