--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,6 @@ data/MELDRaw/train_data/train_splits/WAVs/*
 data/MELDRaw/train_data/train_splits/MP4s/*
 !data/MELDRaw/train_data/train_splits/MP4s/*.py
 
-
 data/EmoSynth
 
+report/Presentation.pptx
